app: prevent wrapping in usage lines

--- a/app/style/_code_file.scss
+++ b/app/style/_code_file.scss
@@ -159,6 +159,7 @@
 
 	.usages {
 		line-height: 1.7;
+		white-space: nowrap;
 
 		.usage-header {
 			.fa-spin {
